--- a/templates/add_a_party.html
+++ b/templates/add_a_party.html
@@ -1,22 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="well spaced">
+<div class="row"  style="padding-top: 3em">
+    <div class="col-md-4 col-md-offset-4 round_div">
+        <h1>Create a party</h1><br>
 
-    <form action="/party_added" method="POST">
-        <div class="form-group">
-            <label>
-                <h4><strong>Make a party:</strong></h4>
-
-                <p>Create a name for your party:
-                    <input type="text" name="title" class="form-control">
-                </label>
-            </div>
-
+        <form action="/party_added" method="POST">
             <div class="form-group">
+                <label>Create a name for your party:</label>
+                        <input type="text" name="title" class="form-control">
+                </div>
 
-                <input type="submit" value="Create a party" class="btn">
+                <div class="form-group">
+
+                    <input type="submit" value="Create a party" class="btn btn-success btn-block">
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
 {% endblock %}
