--- a/templates/recipe_profile.html
+++ b/templates/recipe_profile.html
@@ -1,22 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kind Table</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/site.css">
-    <script src="http://code.jquery.com/jquery.js"></script>
-</head>
+{% extends 'base.html' %}
+{% block content %}
+
+ <h1>{{  this_recipe.title  }}</h1>
+ <p style="text-align: center">This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a><br>
+    <a href="{{ this_recipe.recipe_url}}" target="_blank">View recipe at Spoonacular</a></p>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2" style="padding-top: 3em">
+
+   
 
 
-<div class="container-fluid">
-    <h1>{{  this_recipe.title  }}</h1>
+    
+\
 
-    <p>This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a>
-
-        <p><a href="{{ this_recipe.recipe_url}}" target="_blank">View recipe at Spoonacular</a>
-
-            <p>Safe for:</p>
+            <b>Safe for:</b>
             <ul>
                 {% for key, value in works_for.iteritems() %}
                 {{  key  }}: {% for each in value %}{{  each  }}{% if not loop.last %}, {% endif %}{% endfor %}<br>{% endfor %}</li>
@@ -24,7 +21,7 @@
             <div>
 
                 <ul>
-                    <li><strong>Ingredients</strong></li>
+                    <li><b>Ingredients</b></li>
                     <ul>{% for each in ingredients %}
                         <li>{{  each.decode('utf-8')  }}</li>
                         {% endfor %}</ul>
@@ -32,7 +29,7 @@
                     </ul>
 
                     <ul>
-                        <li><strong>Instructions</strong></li>
+                        <li><b>Instructions</b></li>
                         <ul>{% for each in instructions %}
                             <li>{{  each.decode('utf-8') }}</li>
                             {% endfor %}</ul>
@@ -40,12 +37,13 @@
                         <div>
                             
                             <div>
-                                <img src="{{  this_recipe.recipe_image_url  }}" alt="{{  this_recipe.title  }}" class="img-fluid" >
+                                <img src="{{  this_recipe.recipe_image_url  }}" alt="{{  this_recipe.title  }}" class="img-fluid center" >
                             </div>
 
 
 
                             <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-                        </div>
-                    </body>
-                    </html>
+                                              </div>
+</div>
+</div>
+{% endblock %}
