--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -2,23 +2,19 @@
 {% block content %}
 
 <div class="row well spaced" style="padding-top: 3em">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-8 col-md-offset-2">
         
-        <div class="row">
-      
-                <h1>User Profile: {{  this_user.first_name  }} {{  this_user.last_name  }}</h1>
-       
-        </div>
         <div class = "row round_div" style="padding-top: 2em">
+            <h1>User Profile: {{  this_user.first_name  }} {{  this_user.last_name  }}</h1><br>
             <div class="col-md-3">
                 <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#userchange" style="width: 100%">update<br>basic<br>info</button></h1>
             </div>
-            <div class="col-md-6">
-                First name: {{ this_user.first_name }}<br>
-                Last name: {{ this_user.last_name }} <br>
-                Email address: {{ this_user.email }} <br>
-                Diet: {{ this_user.diet.diet_type }}<br>
-                Diet Reason: {{ this_user.diet_reason }}
+            <div class="col-md-8">
+                <b>First name:</b> {{ this_user.first_name }}<br>
+                <b>Last name:</b> {{ this_user.last_name }} <br>
+                <b>Email address:</b> {{ this_user.email }} <br>
+                <b>Diet:</b> {{ this_user.diet.diet_type }}<br>
+                <b>Diet Reason:</b> {{ this_user.diet_reason }}
             </div>
         </div>    
                             
@@ -26,8 +22,8 @@
             <div class="col-md-3">
                 <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#Intols" style="width: 100%">add an<br>intolerance/<br>allergy</button>
             </div>
-            <div class="col-md-6">
-            Intolerances:
+            <div class="col-md-8">
+            <b>Intolerances:</b>
             <ul>
                 <div id="userIntolerances">
                     <li>{% for intolerance in this_user.intolerances %}{{ intolerance.intol_name }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
@@ -38,8 +34,8 @@
             <div class="col-md-3">
                 <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#IngToAvoid">add<br>ingredients<br>to avoid</button>
             </div>
-            <div class="col-md-6">
-                Ingredients to avoid:
+            <div class="col-md-8">
+                <b>Ingredients to avoid:</b>
                 <ul>
                     {% for avoid in this_user.avoidances %}
                     <li>{{ avoid.ingredient }} - (<i>{{ avoid.reason}}</i>)</li>
@@ -50,31 +46,30 @@
                           
         <div class = "row round_div" style="padding-top: 2em">
             <div class="col-md-3">
-                <a href="/findfriend" class="btn btn-info btn-block">add<br>a new<br>friend</a></li>
+                <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#AddAFriend">add a<br>new<br>friend</button>
             </div>
-            <div class="col-md-6">
-                Friends:
-                    <ul>
+            <div class="col-md-8">
+                <b>Friends:</b>
+                
                         {% for person in this_user.friends %}    
-                        <li><a href="/friendprofile/{{ person.friends.user_id }}">{% if person.friends.first_name is not none %}{{ person.friends.first_name }}{% else %}{%endif %}
+                        <a href="/friendprofile/{{ person.friends.user_id }}" class="btn btn-primary btn-block" style="margin-top:5px">{% if person.friends.first_name is not none %}{{ person.friends.first_name }}{% else %}{%endif %}
                             {% if person.friends.last_name is not none %}{{ person.friends.last_name }}{% else %}{%endif %} ({{ person.friends.email }})</a>
                             {% endfor %}       
-                    </ul>
+                    
             </div>
         </div>
         <div class = "row round_div" style="padding-top: 2em">
             <div class="col-md-3">
-                <a href="/addaparty" class="btn btn-info btn-block">add a<br>new<br>party</a></li>        
+                 <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#AddAParty">Create a<br>new<br>party</button>
             </div>
-            <div class="col-md-6">
-                Parties:
-                <ul>
+            <div class="col-md-8">
+                <b>Parties:</b>
+                
                     {% for party in this_user.parties %}
-                    <li>
-                        <a href="/party_profile/{{ party.party_id }}">{{ party.title }}</a> 
-                    </li>
+                
+                        <a href="/party_profile/{{ party.party_id }}" class="btn btn-primary btn-block" style="margin-top:5px">{{ party.title }}</a> 
+                
                     {% endfor %}
-                </ul>
             </div>
         </div>
     </div>   <!-- initial column -->
@@ -113,13 +108,40 @@
                                                         <label>Reason they follow this diet (optional):</label>
                                                         <input type="text" name="diet_reason" class="form-control" value="{% if this_user.diet_reason is not none %}{{ this_user.diet_reason }}{% else %}{%endif %}"><br>
                                                 
-                                                        <input type="submit" value="update friend profile" class="btn">
+                                                        <input type="submit" value="update friend profile" class="btn btn-success">
                                                     </div>
                                                  </form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
+
+                                                <!-- Modal -->
+                <div id="AddAFriend" class="modal fade" role="dialog">
+                   <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Add a friend</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form action="/addafriend" method="POST">
+                               <div class="form-group">
+                                    <label>Email address:</label><br>
+                                    <input type="email" name="email_address" class="form-control">
+                                </div><br>
+                                <div class="form-group">
+                                    <input type="submit" value="Add Friend" class="btn btn-success">    
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
                                                                     <!-- Modal -->
                                 <div id="Intols" class="modal fade" role="dialog">
@@ -133,17 +155,16 @@
                                             <div class="modal-body">
                                                 <form action="/intolerance_added" method="POST">
                                                     <div class="form-group">
-                                                        <label>
-                                                            <p>Select all that apply:</p>
+                                                        <label>Select all that apply:</label><br>
                                                             {% for intolerance in intol_list %}  
-                                                            <input type="checkbox" name="intol_ids" value={{ intolerance.intol_id }}>   {{ intolerance.intol_name }}  
+                                                            <input type="checkbox" name="intol_ids" value={{ intolerance.intol_id }}>   {{ intolerance.intol_name }}<br>  
                                                             {% endfor %}
-                                                            <br>
+                                                                <br>
 
-                                                        </label>
-                                                    </div>
+            
+                                                    </div><br>
                                                     <div class="form-group">
-                                                        <input type="submit" value="Done" class="btn" id="intolDone">
+                                                        <input type="submit" value="Done" class="btn btn-success" id="intolDone">
                                                     </div>
                                                 </form>
                                             </div>
@@ -170,9 +191,9 @@
                                                             <p>Reason you would like to avoid this ingredient (optional):</p>
                                                             <input type="text" name="reason" class="form-control">
                                                         </label>
-                                                    </div>
+                                                    </div><br>
                                                     <div class="form-group">
-                                                        <input type="submit" value="Done" class="btn" id="avoidDone">
+                                                        <input type="submit" value="Done" class="btn btn-success" id="avoidDone">
                                                     </div>
                                                 </form>
                                             </div>
@@ -180,6 +201,35 @@
                                         </div>
                                     </div>
                                 </div>
+
+
+
+                                <div id="AddAParty" class="modal fade" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <!-- Modal content-->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">Create a new party</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                      <form action="/party_added" method="POST">
+                                                    <div class="form-group">
+                                                        <label>Create a name for your party:</label>
+                                                        <input type="text" name="title" class="form-control">
+                                                    </div><br>
+                                                    <div class="form-group">
+                                                        <input type="submit" value="Create a party" class="btn btn-success">
+                                                    </div>
+                                                </form>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+
 
         <script>
         "use strict";
